--- a/headings.html
+++ b/headings.html
@@ -8,5 +8,5 @@
         <h5>The 5th large heading</h5>
         <h6>The 6th large heading</h6>
     </body>
-
+    <img src="download.jfif">
 </html>
