including the form and button

--- a/headings.html
+++ b/headings.html
@@ -8,6 +8,35 @@
         <h5>The 5th large heading</h5>
         <h6>The 6th large heading</h6>
     </body>
-    
+
     <img src="download.jfif">
+    <br>
+    <br>
+    And now let's do tables!
+    <br>
+    <table>
+        <tr>
+            <th>Kid's names</th>
+            <th>Kid's gender</th>
+            <th>Kid's age</th>
+        </tr>
+        <tr>
+            <td>Betka</td>
+            <td>Female</td>
+            <td>4</td>
+            <td>errors</td>
+            <td>errors</td>
+            <td>errors</td>
+        </tr>
+        <tr>
+            <td>Bertik</td>
+            <td>Male</td>
+            <td>1.5 </td>
+        </tr>
+    </table>
+    <form>
+        <input type="text" placeholder="Full Name here pls" name="Name">
+        <button>Don't click me ever!</button>
+    </form>
+
 </html>
