--- a/headings.html
+++ b/headings.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
 <html>
+    <header>YO FIRST HTML PAGE</header>
+    <style>
+        h1 {
+            color:darkmagenta;
+            text-align: center;
+        }
+    </style>
+    <style>
+            p {
+                color:rgb(51, 29, 51);
+                text-align: left;
+            }
+    </style>
+    <style>
+            h2 {
+                color:rgba(82, 14, 6, 0.397);
+                text-align: left;
+            }
+    </style>
     <body>
         <h1>The most large heading</h1>
         <h2>The 2nd heading</h2>
@@ -38,5 +57,11 @@
         <input type="text" placeholder="Full Name here pls" name="Name">
         <button>Don't click me ever!</button>
     </form>
-
+    <br>
+    <br>
+    <br>
+    <h1> ------------------------------------</h1>
+    <h1> Welcome to my first style paragraph</h1>
+    <p>So I could theoretically put some cool text here</p>
+    <p>And also to this second paragraph</p>
 </html>
