complete new layout

--- a/headings.html
+++ b/headings.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <header>YO FIRST HTML PAGE</header>
-    <style>
-        h1 {
-            color:darkmagenta;
-            text-align: center;
-        }
-    </style>
-    <style>
-            p {
-                color:rgb(51, 29, 51);
-                text-align: left;
-            }
-    </style>
-    <style>
-            h2 {
-                color:rgba(82, 14, 6, 0.397);
-                text-align: left;
-            }
-    </style>
+    <head>
+        <header>YO FIRST HTML PAGE</header>
+        <link   rel="stylesheet" href="styles.css"
+    </head>
     <body>
-        <h1>The most large heading</h1>
+        <h1 style="">The most large heading</h1>
+        <div>testuju hnusnej div</div>
         <h2>The 2nd heading</h2>
         <h3>The 3rd large heading</h3>
         <h4>The 4th large heading</h4>
         <h5>The 5th large heading</h5>
         <h6>The 6th large heading</h6>
-    </body>
 
     <img src="download.jfif">
     <br>
@@ -43,9 +28,6 @@
             <td>Betka</td>
             <td>Female</td>
             <td>4</td>
-            <td>errors</td>
-            <td>errors</td>
-            <td>errors</td>
         </tr>
         <tr>
             <td>Bertik</td>
@@ -54,8 +36,8 @@
         </tr>
     </table>
     <form>
-        <input type="text" placeholder="Full Name here pls" name="Name">
-        <button>Don't click me ever!</button>
+        <input type="text" placeholder="Full Name here pls" name="Name" >
+        <button class="boldfont">Don't click me ever!</button>
     </form>
     <br>
     <br>
@@ -64,4 +46,13 @@
     <h1> Welcome to my first style paragraph</h1>
     <p>So I could theoretically put some cool text here</p>
     <p>And also to this second paragraph</p>
-</html>
+    </body>
+    <div id ="middle">
+            Smaller  <span class="boldfont">bottom</span> of the page.
+        </div>
+
+    <div id ="bottom">
+        This is really the <span class="boldfont">bottom</span> of the page.
+    </div>
+    
+ </html>
