--- a/headings.html
+++ b/headings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <header>YO FIRST HTML PAGE</header>
+        <header>JIRI SMRDI</header>
         <link   rel="stylesheet" href="styles.css"
     </head>
     <body>
