feature branch test

--- a/headings.html
+++ b/headings.html
@@ -54,5 +54,5 @@
     <div id ="bottom">
         This is really the <span class="boldfont">bottom</span> of the page.
     </div>
-    
+    Testing also feature branches.
  </html>
