checking if there is any corresponding branch or not

--- a/headings.html
+++ b/headings.html
@@ -55,4 +55,5 @@
         This is really the <span class="boldfont">bottom</span> of the page.
     </div>
     Testing also feature branches.
+    Yet there is not corresponding branch in the repo.
  </html>
