--- a/headings.html
+++ b/headings.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <header>JIRI SMRDI</header>
-        <link   rel="stylesheet" href="styles.css"
+        <link   rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <header id="middle">JIRI SMRDI</header>
         <h1 style="">The most large heading</h1>
         <div>testuju hnusnej div</div>
         <h2>The 2nd heading</h2>
